--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,9 @@
-DEBUG=True                # or False in production
+DEBUG=True
 SECRET_KEY=your-secret-key
-DATABASE_URL=postgres://hn_user:hn_pass@localhost:5432/hn_db
+POSTGRES_DB=hn_db
+POSTGRES_USER=hn_user
+POSTGRES_PASSWORD=hn_pass
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 REDIS_URL=redis://localhost:6379/1
 ALLOWED_HOSTS=localhost,127.0.0.1
