--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,6 @@
-DEBUG=True
-SECRET_KEY=your-secret-key
-POSTGRES_DB=hn_db
-POSTGRES_USER=hn_user
-POSTGRES_PASSWORD=hn_pass
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+DEBUG=True                        # Toggle debug mode
+SECRET_KEY=your-secret-key        # Django secret key
+DJANGO_SETTINGS_MODULE=analytics.settings
+DATABASE_URL=postgres://hn_user:hn_pass@localhost:5432/hn_db
 REDIS_URL=redis://localhost:6379/1
 ALLOWED_HOSTS=localhost,127.0.0.1
