--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,3 +35,55 @@ typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+amqp==5.3.1
+annotated-types==0.7.0
+asgiref==3.9.1
+attrs==25.3.0
+billiard==4.2.1
+celery==5.5.3
+certifi==2025.6.15
+channels==4.2.2
+channels_redis==4.2.1
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+dj-database-url==3.0.1
+Django==5.2.4
+django-redis==6.0.0
+djangorestframework==3.16.0
+drf-spectacular==0.28.0
+idna==3.10
+inflection==0.5.1
+iniconfig==2.1.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+kombu==5.5.4
+msgpack==1.1.1
+packaging==25.0
+pluggy==1.6.0
+prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-django==4.11.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+redis==6.2.0
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.26.0
+six==1.17.0
+sqlparse==0.5.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
